--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,12 @@
 ---
 layout: default
 ---
+
 <div class="post">
   <h1 class="postTitle">{{ page.title }}</h1>
-  <!-- <p class="meta">
-    {{ page.date | date: '%B %d, %Y' }} | <span class="time">{{ page.content | number_of_words | divided_by:180 }}</span>
-    Minute Read
-  </p> -->
+  <p class="text-success">
+    {{ page.date | date_to_string }}
+  </p>
+  </br>
   {{ content }}
 </div>
