--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,14 +3,6 @@ layout: default
 ---
 <h2>Posts related to: {{ page.title }}</h2>
 
-{% unless page.content == '' %}
-  <p>{{ page.content }}</p>
-{% endunless %}
-
-{% unless site.categories.[page.category] | size > 0 %}
-  <p>No posts in this category at this time.</p>
-{% endunless %}
-
 {% for post in site.categories.[page.category] %}
 <div class="post-preview">
     <a href="{{ post.url | prepend: site.baseurl }}">
@@ -24,13 +16,7 @@ layout: default
         {% endif %}
     </a>
     <p class="post-meta">
-      Posted by
-      {% if post.author %}
-        {{ post.author }}
-      {% else %}
-        {{ site.title }}
-      {% endif %}
-      on {{ post.date | date: "%B %-d, %Y" }}
+      Posted on {{ post.date | date_to_string }}
     </p>
 </div>
 <hr>
