--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,9 +1,11 @@
 ---
 layout: default
+permalink: /categories/
+title: Categories
 ---
 <h2>Posts related to: {{ page.title }}</h2>
 
-{% for post in site.categories.[page.category] %}
+{% for post in site.categories[page.category] %}
 <div class="post-preview">
     <a href="{{ post.url | prepend: site.baseurl }}">
         <h2 class="post-title">
