--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,7 +3,8 @@ layout: default
 ---
 <h2>Posts related to: {{ page.title }}</h2>
 
-{% for post in site.categories[page.category] %}
+{% assign posts = site.categories[page.category] %}
+{% for post in posts %}
 <div class="post-preview">
     <a href="{{ post.url | prepend: site.baseurl }}">
         <h2 class="post-title">
