--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,7 +1,20 @@
 ---
 layout: default
 ---
-<h2>Posts related to: {{ page.title }}</h2>
+<h2>Posts related to: {{ page.category }}</h2>
+
+{% for category in site.categories[page.category] %}
+  <a>{{ category | first }}</a>
+  <ul>
+      {% for posts in category %}
+          {% for post in posts %}
+              {% if post.url %}
+                  <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+              {% endif %}
+          {% endfor %}
+      {% endfor %}
+  </ul>
+{% endfor %}
 
 {% assign posts = site.categories[page.category] %}
 {% for post in posts %}
