--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -4,6 +4,7 @@ layout: default
 <h2>Posts related to: {{ page.category }}</h2>
 
 {% assign posts = site.categories[page.category] %}
+{% assign post_count = site.categories[page.category] | size %}
 {% for post in posts %}
 <div class="post-preview">
     <a href="{{ post.url | prepend: site.baseurl }}">
@@ -20,5 +21,4 @@ layout: default
       Posted on {{ post.date | date_to_string }}
     </p>
 </div>
-<hr>
 {% endfor %}
