social share done

--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,13 +1,11 @@
 <div class="row">
-  <div class="col-xs-4 col-sm-2">
-    <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
-    <script type="IN/Share" data-url="https://deepak6sp.github.io/" data-counter="right"></script>
-  </div>
-  <div class="col-xs-4 col-sm-2">
+  <div class="col-xs-2 col-md-1">
     <a class="twitter-share-button"
-      href="https://twitter.com/intent/tweet?text={{page.title}} https://deepak6sp.github.io{{page.url}}"
-      data-size="large">
-      Tweet
+      href="https://twitter.com/intent/tweet?text={{page.title}} https://deepak6sp.github.io{{page.url}}">
     </a>
+  </div>
+  <div class="col-xs-10">
+    <script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+    <script type="IN/Share" data-url="https://deepak6sp.github.io{{page.url}}" data-counter="right"></script>
   </div>
 </div>
