--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,10 @@
-<footer>
-  <hr/>
-  <div class="container-fluid container">
-    <p class="pull-left">Written with ♡ </p>
-    <p class="pull-right">© 2017 Deepak Prakash</p>
+<footer class="page-footer light-blue darken-4">
+  <div class="footer-copyright">
+    <div class="container">
+      Written with ♡
+      <div class="grey-text text-lighten-4 right">
+        © 2017 Deepak Prakash
+      </div>
+    </div>
   </div>
 </footer>
