--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,29 +1,20 @@
-<header>
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">{{ site.title }}</a>
-        <!-- <div class="fb-share-button" data-href="https://deepak6sp.github.io/" data-layout="button_count" data-size="small" data-mobile-iframe="true">
-          <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdeepak6sp.github.io%2F&amp;src=sdkpreparse">
-            Share
-          </a>
-        </div> -->
-      </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          {% for link in site.navigation %}
-            <li><a href="{{ link.url }}">{{ link.title }}</a></li>
-          {% endfor %}
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-</header>
+<!-- Always shows a header, even in smaller screens. -->
+<nav class="light-blue darken-4">
+  <div class="nav-wrapper container">
+    <a href="/" class="brand-logo">{{ site.title }}</a>
+    <ul class="right">
+      {% for link in site.navigation %}
+          <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+      {% endfor %}
+    </ul>
+
+    <ul class="side-nav" id="slide-out">
+      <h5>Categories</h5>
+      {% for category in site.categories %}
+        {% assign category_name = category[0] | downcase %}
+        <li><a class="waves-effect waves-light-blue" href="/categories/{{ category_name }}.html">{{ category[0] | capitalize }}</a></li>
+      {% endfor %}
+    </ul>
+    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+  </div>
+</nav>
