--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,10 +1,10 @@
 <div class="row">
-  <div class="col-xs-2 col-md-1">
+  <div class="col s2 m1">
     <a class="twitter-share-button"
       href="https://twitter.com/intent/tweet?text={{page.title}} https://deepak6sp.github.io{{page.url}}">
     </a>
   </div>
-  <div class="col-xs-10">
+  <div class="col s2 m1">
     <script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
     <script type="IN/Share" data-url="https://deepak6sp.github.io{{page.url}}" data-counter="right"></script>
   </div>
