--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,11 @@
 {% include head.html %}
 <body>
   {% include header.html %}
-  <div class="content">
-    <div class="container">
+  <main class="mdl-layout__content">
+    <div class="page-content container">
       {{ content }}
     </div>
-  </div><!-- end .content -->
-  
+  </main><!-- end .content -->
   {% include footer.html %}
   {% include scripts.html %}
 </body>
