--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,24 +1,24 @@
 ---
 layout: default
 ---
-<h2>Posts related to: {{ page.category }}</h2>
+<h4>Posts related to: {{ page.category }}</h4>
 
 {% assign posts = site.categories[page.category] %}
 {% assign post_count = site.categories[page.category] | size %}
 {% for post in posts %}
-<div class="post-preview">
+<div class="card-panel">
     <a href="{{ post.url | prepend: site.baseurl }}">
-        <h2 class="post-title">
+        <h5 class="post-title">
             {{ post.title }}
-        </h2>
+        </h5>
         {% if post.subtitle %}
-        <h3 class="post-subtitle">
+        <h4 class="post-subtitle">
             {{ post.subtitle }}
-        </h3>
+        </h4>
         {% endif %}
     </a>
-    <p class="post-meta">
+    <h6 class="post-meta">
       Posted on {{ post.date | date_to_string }}
-    </p>
+    </h6>
 </div>
 {% endfor %}
