--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,12 +3,11 @@ layout: default
 ---
 
 <div class="post">
-  <h1 class="postTitle">{{ page.title }}</h1>
-  <p class="text-success">
+  <h4 class="postTitle">{{ page.title }}</h4>
+  <h6 class="text-success">
     {{ page.date | date_to_string }}
-  </p>
+  </h6>
   {% include social-share.html %}
-  </br>
   {{ content }}
   </br>
 
