--- a/assets/scss/globals/_defaults.scss
+++ b/assets/scss/globals/_defaults.scss
@@ -1,11 +1,33 @@
-body{
-  padding-top: 75px;
-}
-
 p {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
+  color: $black;
 }
 
 .container {
   max-width: 1024px;
+  margin:0 auto;
+}
+
+body {
+   display: flex;
+   min-height: 100vh;
+   flex-direction: column;
+ }
+
+ main {
+   flex: 1 0 auto;
+ }
+
+ a {
+   color:$primary_color;
+ }
+
+pre {
+  background:$black;
+  color:$white;
+  padding: 10px 20px;
+}
+
+figure {
+  margin:0px;
 }
