--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,8 @@
 {% include head.html %}
 <body>
   {% include header.html %}
-  <main class="mdl-layout__content">
-    <div class="page-content container">
-      {{ content }}
-    </div>
+  <main class="page-content container">
+    {{ content }}
   </main><!-- end .content -->
   {% include footer.html %}
   {% include scripts.html %}
